--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.6",
@@ -12,14 +13,11 @@
     "@vuemap/vue-amap": "^1.1.13",
     "@vueuse/integrations": "^10.6.1",
     "axios": "^0.27.2",
-    "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.6",
-    "install": "^0.13.0",
     "js-base64": "^3.7.2",
     "moment": "^2.29.4",
-    "node-sass": "^9.0.0",
     "ol": "^7.1.0",
     "universal-cookie": "^6.1.1",
     "vue": "^3.2.13",
@@ -28,11 +26,9 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "sass-loader": "^13.2.2",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "sass": "^1.69.0",
+    "typescript": "^5.1.6",
+    "vite": "^5.0.0"
   }
 }
